[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["bretthancox <brett.hancox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
text_io = "0.1.7"

[dev-dependencies]
pretty_assertions = "0.6"
